--- a/style.css
+++ b/style.css
@@ -84,75 +84,117 @@ html{
 }
 
 
-.logo{
-    width:20%;
-    display: flex;
-    justify-content: center;
-    align-items: left;
+.bar{
+    width: 33px;
+    background-color: #000;
+    height: 4px;
+    margin: 5px 3px;
 }
-.logo img{
-    width: 62%;
-    margin-left: -2rem;
-}
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
-    top:0;
-    cursor: pointer;
-    z-index: 1;
+
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0 100px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #000;
     text-transform: uppercase;
+    font-weight: bolder;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    z-index: 1000;
+    font-size: 19px;
+}
+
+header img{
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 2rem;
+
+}
+
+header nav{
+    float: right;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+ul{
+    padding: 0;
+    display: flex;
     
 }
 
-.nav-list{
-    width: 62%; 
-    display: flex; 
-    align-items: right;
-    margin-left: 18rem;
-}
-
-.nav-list li{
+li{
     list-style: none;
-    padding: 26px 27px;
-    text-align: center;
-
+    margin-top: 1rem;
 }
 
-.nav-list li a{
+a{
+    height: 50px;
+    line-height: 50px;
+    padding: 0 20px;
+    color: #fff;
     text-decoration: none;
-    color: white;
-    font-size: 1.2rem;
-    letter-spacing: 2px;
-    font-weight: 700;
+    display: block;
+    
 }
-
-.nav-list li a:hover{ 
-    color:#ffda21;
+a:hover,
+a.active{
+    color: #ffda21;
 }
-
-
-.background{
-    background: rgba(0, 0, 0, 0.7) url('banner.jpg');
-    background-size: cover;
-    background-blend-mode: darken;
-    height: 6rem;
-    z-index: 10;
-}
-
-.burger{
-    display: none;
-    position: absolute;
+.menu-toggle{
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
     cursor: pointer;
-    right: 5%;
-    top:15px;
+    display: none;
+
 }
-.line{
-    width: 33px;
-    background-color: white;
-    height: 4px;
-    margin: 5px 3px;
+.bar{
+    background: #ffda21;
+
+}
+
+@media (max-width:991px){
+    header
+    {
+        padding: 0 20px;
+    }
+    header img{
+        margin-top: 1rem;
+    }
+    .menu-toggle
+    {
+        display: block;
+        margin-top:2rem;
+
+    }
+    header nav{
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #333;
+        top:50px;
+        left: -100%;
+        transition: 0.5s;
+    }
+    header nav.active{
+        left: 0;
+        margin-top: 1.4rem;
+    }
+    header nav ul{
+        text-align: center;
+        display: block;
+    }
+    li a{
+        border-bottom: 1px solid rgb(250, 250, 200);
+    }
 }
 
 /* fffffffffffff */
@@ -273,7 +315,7 @@ a img{
     height: 2rem;
     margin-right:2rem ;
     float: right;
-    margin-top: 44px;
+    margin-top: -30px;
 }
 
 .choose-control{
