--- a/style.css
+++ b/style.css
@@ -856,7 +856,7 @@ span{
     content: "";
     position: absolute;
     background-color: #ffda21;
-    width: 10rem;
+    width: 11rem;
     height: 3rem;
     border-bottom-right-radius:.5rem;
     border-top-left-radius:0.5rem;
@@ -1197,15 +1197,15 @@ span{
     font-size: 12px;
     transform: translateY(-20px); /* comes up */
 }
-.dev-icon{
+.dev-icon a{
     position: fixed;
     transition: 1s;
     transition-property: transform;
-    transform: translate(-108px,0);
+    transform: translate(-125px,0);
     z-index: 1;
 }
 
-.dev-icon:hover{
+.dev-icon a:hover{
     transform: translate(0px,0);
     z-index: 1;
 
@@ -1379,7 +1379,7 @@ display: block;}
     }
     .taskBx0{
     margin-top: -6rem;
-    font-size: 1.2em;
+    font-size: 1em;
 
     }
     .slideBx0{
@@ -1441,7 +1441,7 @@ display: block;}
 .taskBx0{
     margin-left: 1rem;
     margin-top: -6rem;
-    font-size: 1em;
+    font-size: 0.9em;
 }
 .slideBx0{
     font-size: 1em;
